--- a/src/program/resources/fxml/Connection.fxml
+++ b/src/program/resources/fxml/Connection.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane prefHeight="414.0" prefWidth="764.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane id="PaneColor" alignment="CENTER" prefHeight="414.0" prefWidth="764.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -22,7 +22,7 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
-      <GridPane prefHeight="300.0" prefWidth="265.0" GridPane.columnIndex="1">
+      <GridPane alignment="CENTER" prefHeight="300.0" prefWidth="265.0" GridPane.columnIndex="1">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="123.0" minWidth="10.0" prefWidth="53.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="302.0" minWidth="10.0" prefWidth="302.0" />
@@ -36,7 +36,7 @@
             <RowConstraints maxHeight="180.0" minHeight="10.0" prefHeight="70.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <GridPane alignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="81.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="10.0" prefWidth="151.0" />
@@ -46,7 +46,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <GridPane prefHeight="144.0" prefWidth="151.0" GridPane.columnIndex="1">
+                  <GridPane alignment="CENTER" prefHeight="144.0" prefWidth="151.0" GridPane.columnIndex="1">
                      <rowConstraints>
                         <RowConstraints maxHeight="77.0" minHeight="10.0" prefHeight="21.0" vgrow="SOMETIMES" />
                         <RowConstraints maxHeight="77.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
@@ -62,7 +62,7 @@
                   </GridPane>
                </children>
             </GridPane>
-            <GridPane prefHeight="92.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <GridPane alignment="CENTER" prefHeight="92.0" prefWidth="300.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="88.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="195.0" minWidth="10.0" prefWidth="156.0" />
@@ -73,7 +73,7 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button id="connectionButton" fx:id="connectionButton" mnemonicParsing="false" prefHeight="36.0" prefWidth="160.0" style="-fx-background-color: black;" text="CONNEXION" textFill="WHITE" GridPane.columnIndex="1" />
+                  <Button id="buttonColor" fx:id="connectionButton" mnemonicParsing="false" prefHeight="36.0" prefWidth="160.0" text="CONNEXION" GridPane.columnIndex="1" />
                   <Hyperlink id="FPWLink" fx:id="FPWLink" text="Mot de passe oublié ?" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <font>
                         <Font size="15.0" />
@@ -82,10 +82,10 @@
                </children>
             </GridPane>
             <GridPane prefHeight="46.0" prefWidth="255.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-              <rowConstraints>
-                <RowConstraints maxHeight="23.0" minHeight="10.0" prefHeight="19.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="28.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
-              </rowConstraints>
+               <rowConstraints>
+                  <RowConstraints maxHeight="23.0" minHeight="10.0" prefHeight="19.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="28.0" minHeight="10.0" prefHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
                   <Label id="badCredentials" fx:id="badCredentials" alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="18.0" prefWidth="356.0" text="badCredentials" textAlignment="CENTER" />
                </children>
@@ -117,7 +117,7 @@
                   <Font name="Berlin Sans FB" size="18.0" />
                </font>
             </Text>
-            <Button id="createAccountButton" fx:id="createAccountButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="36.0" prefWidth="261.0" style="-fx-background-color: black;" text="CREER UN COMPTE" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button id="buttonColor" fx:id="createAccountButton" maxWidth="1.7976931348623157E308" mnemonicParsing="false" prefHeight="36.0" prefWidth="261.0" text="CREER UN COMPTE" GridPane.columnIndex="1" GridPane.rowIndex="2" />
          </children>
       </GridPane>
    </children>
