--- a/src/program/resources/fxml/CreerListe-Popup.fxml
+++ b/src/program/resources/fxml/CreerListe-Popup.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="creerListe" prefHeight="214.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane id="PaneColor" fx:id="creerListe" prefHeight="214.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <VBox fx:id="leftVbox" prefWidth="50.0" BorderPane.alignment="CENTER" />
    </left>
