--- a/src/program/resources/fxml/New_MDP.fxml
+++ b/src/program/resources/fxml/New_MDP.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="Mon_Compte" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane id="PaneColor" fx:id="Mon_Compte" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="537.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox BorderPane.alignment="CENTER">
          <children>
@@ -54,7 +54,7 @@
                         <Insets top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <Button id="New_mail_valider" fx:id="New_mdp_valider" mnemonicParsing="false" text="Valider" translateY="10.0">
+                  <Button id="buttonColor" fx:id="New_mdp_valider" mnemonicParsing="false" text="Valider" translateY="10.0">
                      <font>
                         <Font size="18.0" />
                      </font>
