--- a/src/program/resources/fxml/deleteConfirmation.fxml
+++ b/src/program/resources/fxml/deleteConfirmation.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane prefHeight="214.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane id="PaneColor" prefHeight="214.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <left>
       <VBox prefWidth="40.0" BorderPane.alignment="CENTER" />
    </left>
@@ -37,12 +37,12 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                      </rowConstraints>
                      <children>
-                        <Button id="confirmDelete" fx:id="confirmDelete" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Oui" GridPane.halignment="CENTER">
+                        <Button id="buttonColor" fx:id="confirmDelete" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Oui" GridPane.halignment="CENTER">
                            <font>
                               <Font size="18.0" />
                            </font>
                         </Button>
-                        <Button id="cancelDelete" fx:id="cancelDelete" mnemonicParsing="false" text="Non" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                        <Button id="buttonColor" fx:id="cancelDelete" mnemonicParsing="false" text="Non" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                            <font>
                               <Font size="18.0" />
                            </font>
