--- a/src/program/resources/fxml/moneyThreshold-Popup.fxml
+++ b/src/program/resources/fxml/moneyThreshold-Popup.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="ajouterDepense" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane id="PaneColor" fx:id="ajouterDepense" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <HBox fx:id="logoBox" alignment="CENTER" BorderPane.alignment="CENTER" />
    </top>
