--- a/src/program/resources/fxml/ConsulterMesListes.fxml
+++ b/src/program/resources/fxml/ConsulterMesListes.fxml
@@ -79,7 +79,7 @@
    <bottom>
       <HBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Button id="createListPopup" fx:id="createListPopup" alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="175.0" text="Créer une Liste" textAlignment="CENTER">
+            <Button id="buttonColor" fx:id="createListPopup" alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="175.0" text="Créer une Liste" textAlignment="CENTER">
                <font>
                   <Font size="18.0" />
                </font>
