--- a/src/program/resources/fxml/ConsulterMesListes.fxml
+++ b/src/program/resources/fxml/ConsulterMesListes.fxml
@@ -22,11 +22,11 @@
          <children>
             <ToolBar fx:id="toolbar">
                <items>
-                  <Button id="Panier_Accueil" fx:id="Panier_Accueil" mnemonicParsing="false" text="Accueil" />
-                  <Button id="Panier_Stats" fx:id="Panier_Stats" mnemonicParsing="false" text="Stats" textAlignment="CENTER" />
-                  <Button id="Panier_Liste" fx:id="Panier_Liste" defaultButton="true" mnemonicParsing="false" text="Mes Listes" textAlignment="CENTER" />
-                  <Button id="Panier_Alertes" fx:id="Panier_Alertes" mnemonicParsing="false" text="Alertes" textAlignment="CENTER" />
-                  <Button id="Panier_MonCompte" fx:id="Panier_MonCompte" mnemonicParsing="false" text="Mon Compte" textAlignment="CENTER" />
+                  <Button id="PaneColor" fx:id="Panier_Accueil" mnemonicParsing="false" text="Accueil" />
+                  <Button id="PaneColor" fx:id="Panier_Stats" mnemonicParsing="false" text="Stats" textAlignment="CENTER" />
+                  <Button id="buttonColor" fx:id="Panier_Liste" defaultButton="true" mnemonicParsing="false" text="Mes Listes" textAlignment="CENTER" />
+                  <Button id="PaneColor" fx:id="Panier_Alertes" mnemonicParsing="false" text="Alertes" textAlignment="CENTER" />
+                  <Button id="PaneColor" fx:id="Panier_MonCompte" mnemonicParsing="false" text="Mon Compte" textAlignment="CENTER" />
                </items>
             </ToolBar>
             <HBox fx:id="logoBox" alignment="CENTER">
