--- a/src/program/resources/fxml/MyInscription.fxml
+++ b/src/program/resources/fxml/MyInscription.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -126,37 +125,37 @@
                   <Font size="18.0" />
                </font>
             </Label>
-         </children>
-      </VBox>
-   </center>
-   <bottom>
-      <Button id="validateInscriptionButton" fx:id="validateInscriptionButton" alignment="CENTER" mnemonicParsing="false" text="Valider" textAlignment="CENTER" BorderPane.alignment="CENTER">
-         <font>
-            <Font size="19.0" />
-         </font>
-         <BorderPane.margin>
-            <Insets bottom="10.0" />
-         </BorderPane.margin>
-      </Button>
-   </bottom>
-   <top>
-      <SplitPane dividerPositions="0.5" BorderPane.alignment="CENTER">
-         <items>
+            <Button id="validateInscriptionButton" fx:id="validateInscriptionButton" alignment="CENTER" mnemonicParsing="false" text="Valider" textAlignment="CENTER">
+               <font>
+                  <Font size="19.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
+            </Button>
             <Hyperlink id="backToConnectionLink" fx:id="backToConnectionLink" contentDisplay="TOP" text="&lt; Retour">
                <font>
                   <Font size="18.0" />
                </font>
+               <VBox.margin>
+                  <Insets top="5.0" />
+               </VBox.margin>
             </Hyperlink>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="/program/resources/images/FoodJET.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </HBox>
-         </items>
-      </SplitPane>
+         </children>
+      </VBox>
+   </center>
+   <top>
+      <HBox alignment="CENTER" BorderPane.alignment="CENTER">
+         <children>
+            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="/program/resources/images/FoodJET.png" />
+               </image>
+            </ImageView>
+         </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+      </HBox>
    </top>
 </BorderPane>
