--- a/src/program/resources/fxml/New_mail.fxml
+++ b/src/program/resources/fxml/New_mail.fxml
@@ -36,7 +36,7 @@
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER" />
    </right>
    <center>
-      <VBox alignment="CENTER" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" BorderPane.alignment="CENTER">
          <children>
             <VBox alignment="CENTER">
                <children>
@@ -61,14 +61,20 @@
                      <font>
                         <Font size="18.0" />
                      </font></Button>
-                  <Hyperlink id="New_mail_retour" fx:id="New_mail_retour" text="Retour" textAlignment="CENTER" translateY="35.0">
+                  <Hyperlink id="New_mail_retour" fx:id="New_mail_retour" text="Retour" textAlignment="CENTER">
                      <font>
                         <Font size="20.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
                   </Hyperlink>
                </children>
             </VBox>
          </children>
+         <BorderPane.margin>
+            <Insets top="20.0" />
+         </BorderPane.margin>
       </VBox>
    </center>
 </BorderPane>
