Produits peuvent être supprimés dans les listes ou l'historique

--- a/src/program/resources/fxml/ConsulterUneListe.fxml
+++ b/src/program/resources/fxml/ConsulterUneListe.fxml
@@ -22,7 +22,7 @@
             <Label prefHeight="17.0" prefWidth="490.0" />
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
-                  <Text id="listInfo" fx:id="listInfo" strokeType="OUTSIDE" strokeWidth="0.0" text="Liste %list% Total: %produits% produits pour %nombre%€" textAlignment="CENTER" wrappingWidth="423.2060546875">
+                  <Text id="listInfo" fx:id="listInfo" strokeType="OUTSIDE" strokeWidth="0.0" text="\%list% Total: %produits% produits pour %nombre%€" textAlignment="CENTER" wrappingWidth="423.2060546875">
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
